fead: update the readme

--- a/Readme
+++ b/Readme
@@ -44,6 +44,11 @@ Configura tu base de datos en el archivo `.env`.
 php artisan serve
 php artisan migrate
 php artisan migrate:fresh
+
+migra la semilla (cambiar la clase por la q quieres cargar)
+
+php artisan db:seed --class=CodigoEvaluadorSeeder
+
 ```
 
 ## Reniciar el servidor 
